--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGO="mongodb+srv://mariefsaukanims:mMr425ePc6SaQyo3@cluster0.y60a2lu.mongodb.net/mern-auth0?retryWrites=true&w=majority&appName=Cluster0"
+
+JWT_SECRET="secret"
