--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
     "nodemon": "^3.1.10"
+  },
+  "devDependencies": {
+    "eslint-plugin-react": "^7.37.5"
   }
 }
